basic working idea

--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "es5-shim": "4.5.4",
     "fetch-mock": "^5.9.3",
     "jest": "^18.1.0",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.3",
     "mocha": "~3.1.2",
     "mocha-loader": "^1.1.0",
     "mocha-phantomjs": "git+https://github.com/garrensmith/mocha-phantomjs.git",
@@ -76,6 +74,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy": "^1.16.0",
     "imports-loader": "^0.7.0",
+    "inferno-compat": "^3.8.0",
     "jquery": "^2.2.0",
     "jsondiffpatch": "^0.1.41",
     "less": "^2.7.2",
@@ -87,10 +86,8 @@
     "optimist": "^0.6.1",
     "pouchdb-adapter-http": "^6.1.2",
     "pouchdb-core": "^6.1.2",
-    "react": "~15.4.1",
-    "react-addons-css-transition-group": "~15.4.2",
+    "query-string": "^5.0.0",
     "react-bootstrap": "^0.30.7",
-    "react-dom": "~15.4.1",
     "react-motion": "^0.5.0",
     "react-redux": "^5.0.0",
     "react-select": "1.0.0-rc.2",
